# rootA-noUI

./: .gitignore  BACKEND_API_DOCS.md  FRONTEND_INTEGRATION_GUIDE.md  Licence  README.md  adk_sessions.db  main.py  pyproject.toml  r.txt  rag-builder.py  rag_builder.py  requirements.txt  test_mvvm_retrieval.py  users.json
.github/instructions/: ADK guide.instructions.md
UI-UX/: app.js  index.html  style.css
chroma_rag_db/: chroma.sqlite3
custom_rag/default_rag/: chroma.sqlite3
custom_rag/default_rag/1cb7fb48-eb61-4681-9325-ebc54e265dec/: index_metadata.pickle
custom_rag/s/: chroma.sqlite3  s_collection.faiss  s_collection.pkl  s_instructions.txt
custom_rag/sahil/: sahil_instructions.txt
custom_rag/sahil/e6e2bc6e-39e8-479f-b52c-e56a906eaba0/: index_metadata.pickle
custom_rag/shl/: chroma.sqlite3
custom_rag/ss/: chroma.sqlite3  ss_instructions.txt
custom_rag/test_my_new_rag/: chroma.sqlite3
custom_rag/testcustomrag/: chroma.sqlite3  testcustomrag_instructions.txt
custom_rag/testuser/: testuser_instructions.txt
custom_rag/testuser/0e6ef50f-0630-4ccf-8e67-8f4ff7e74986/: index_metadata.pickle
custom_rag/testuserapi/: chroma.sqlite3
multi_tool_agent/: __init__.py  adk_runner.py  agent.py  session_memory.py
vector_db/0754dcec-e03f-4372-a14e-bfae68d9a463/: index_metadata.pickle
