[project]
name = "roota-noui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.9",
    "google-adk>=0.3.0",
    "google-generativeai>=0.8.5",
    "langchain-chroma>=0.2.3",
    "langchain-core>=0.3.56",
    "langchain-google-genai>=2.0.10",
    "pypdf>=5.4.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
